--- a/pl/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/pl/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -44,12 +44,20 @@
 dailyEveryNth=codziennie;co #1 dni;co #1 dni
 repeatDetailsRuleDaily4=w dni robocze
 
-# LOCALIZATION NOTE (weeklyNthOn):
+# LOCALIZATION NOTE (weeklyNthOnNounclass...):
 # Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# Translate these strings according to noun class/gender of weekday (%1$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings.
 # %1$S - weekday (one or more)
 # #2 - week interval
 # e.g. "every 3 weeks on Tuesday, Wednesday and Thursday
-weeklyNthOn=w %1$S;co #2 tygodnie w %1$S;co #2 tygodni w %1$S
+weeklyNthOnNounclass1=w %1$S;co #2 tygodnie w %1$S;co #2 tygodni w %1$S
+weeklyNthOnNounclass2=w %1$S;co #2 tygodnie w %1$S;co #2 tygodni w %1$S
 
 # LOCALIZATION NOTE (weeklyEveryNth):
 # Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
@@ -57,34 +65,83 @@ weeklyNthOn=w %1$S;co #2 tygodnie w %1$S;co #2 tygodni w %1$S
 # e.g. "every 5 weeks"
 weeklyEveryNth=co tydzień;co #1 tygodnie;co #1 tygodni
 
+# LOCALIZATION NOTE ('repeatDetailsDay...' and 'repeatDetailsDay...Nounclass'):
+# Week days names and week days noun classes (feminine/masculine grammatical
+# gender) for languages that need different localization when weekdays nouns
+# have different noun classes (genders).
+# For every weekday, in 'repeatDetailsDay...Nounclass' strings write:
+#   "nounclass1"     for languages with grammatical genders -> MASCULINE gender;
+#                    for languages with noun classes -> a noun class;
+#                    for languages without noun classes or grammatical gender.
+#
+#   "nounclass2"     for languages with grammatical genders -> FEMININE gender;
+#                    for languages with noun classes -> a different noun class.
+#
+#   "nounclass3", "nounclass4" and so on for languages that need more than two 
+#                    noun classes for weekdays. In this case add corresponding
+#                    rule string with "Nounclass..." suffix and ordinal string
+#                    "repeatOrdinalxNounclass..."
+# Will be used rule strings with "Nounclass..." suffix corresponding to the 
+# following strings if there is a weekday in the rule string.
+
 repeatDetailsDay1=niedzielę
+repeatDetailsDay1Nounclass=nounclass2
 repeatDetailsDay2=poniedziałek
+repeatDetailsDay2Nounclass=nounclass1
 repeatDetailsDay3=wtorek
+repeatDetailsDay3Nounclass=nounclass1
 repeatDetailsDay4=środę
+repeatDetailsDay4Nounclass=nounclass2
 repeatDetailsDay5=czwartek
+repeatDetailsDay5Nounclass=nounclass1
 repeatDetailsDay6=piątek
+repeatDetailsDay6Nounclass=nounclass1
 repeatDetailsDay7=sobotę
+repeatDetailsDay7Nounclass=nounclass2
 
 # LOCALIZATION NOTE (repeatDetailsAnd):
 # Used to show a number of weekdays in a list
 # i.e. "Sunday, Monday, Tuesday " + and + " Wednesday"
 repeatDetailsAnd=i
 
-# LOCALIZATION NOTE (monthlyNthOfEvery):
+# LOCALIZATION NOTE (monthlyNthOfEveryNounclass...):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - ordinal
+# Translate these strings according to noun class/gender of weekday (%2$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings. 
+# %1$S - ordinal with article and noun class/gender corresponding to weekday
 # %2$S - weekday
 # #3 - interval
 # i.e. "the FIRST MONDAY of every 3 months"
-monthlyNthOfEvery=w %1$S %2$S miesiąca;%1$S %2$S co #3 miesiące;%1$S %2$S co #3 miesięcy
+monthlyNthOfEveryNounclass1=w %1$S %2$S miesiąca;%1$S %2$S co #3 miesiące;%1$S %2$S co #3 miesięcy
+monthlyNthOfEveryNounclass2=w %1$S %2$S miesiąca;%1$S %2$S co #3 miesiące;%1$S %2$S co #3 miesięcy
 
-# LOCALIZATION NOTE (monthlyEveryOfEvery):
+# LOCALIZATION NOTE (monthlyDailyOfEvery):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# #1 - interval
+# i.e. "every day of every 3 months"
+#  more specific: every day of January, April, July, October
+monthlyDailyOfEvery=codziennie;codziennie co #1 miesiące;codziennie co #1 miesięcy
+
+# LOCALIZATION NOTE (monthlyEveryOfEveryNounclass...):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# Translate these strings according to noun class/gender of weekday (%1$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings.
 # %1$S - weekday
 # #2 - interval
 # i.e. "every MONDAY of every 3 months"
 #  more specific: every monday of January, April, July, October
-monthlyEveryOfEvery=w każdy(-ą) %1$S ;w każdy(-ą) %1$S co #2 miesiące;w każdy(-ą) %1$S co #2 miesięcy
+monthlyEveryOfEveryNounclass1=w każdy %1$S ;w każdy %1$S co #2 miesiące;w każdy %1$S co #2 miesięcy
+monthlyEveryOfEveryNounclass2=w każdą %1$S ;w każdą %1$S co #2 miesiące;w każdą %1$S co #2 miesięcy
 
 # LOCALIZATION NOTE (monthlyDayOfNth):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
@@ -99,12 +156,28 @@ monthlyDayOfNth=w %1$S. dzień miesiąca;w %1$S. dzień miesiąca co #2 miesiąc
 # e.g. "the last day of every 3 months"
 monthlyLastDayOfNth=w ostatni dzień miesiąca;w ostatni dzień miesiąca co #1 miesiące;w ostatni dzień miesiąca co #1 miesięcy
 
-repeatDetailsOrdinal1=1.
-repeatDetailsOrdinal2=2.
-repeatDetailsOrdinal3=3.
-repeatDetailsOrdinal4=4.
-repeatDetailsOrdinal5=5.
-repeatDetailsOrdinal-1=ostatni(ą)
+# LOCALIZATION NOTE (repeatOrdinal...Nounclass...):
+# Ordinal numbers nouns for every noun class (grammatical genders) of weekdays
+# considered in 'repeatDetailsDayxNounclass' strings. For languages that need
+# localization according to genders or noun classes.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add 'repeatOrdinal...Nounclass' strings with suffix 3, 4 and so on for
+# languages with more than two noun classes for weekdays. In this case 
+# must be added corresponding rule strings with 'Nounclass...' suffix and 
+# corresponding values "nounclass..." must be written in
+# 'repeatDetailsDayxNounclass' strings.
+repeatOrdinal1Nounclass1=pierwszy
+repeatOrdinal2Nounclass1=drugi
+repeatOrdinal3Nounclass1=trzeci
+repeatOrdinal4Nounclass1=czwarty
+repeatOrdinal5Nounclass1=piąty
+repeatOrdinal-1Nounclass1=ostatni
+repeatOrdinal1Nounclass2=pierwszą
+repeatOrdinal2Nounclass2=drugą
+repeatOrdinal3Nounclass2=trzecią
+repeatOrdinal4Nounclass2=czwartą
+repeatOrdinal5Nounclass2=piątą
+repeatOrdinal-1Nounclass2=ostatnią
 
 # LOCALIZATION NOTE (yearlyNthOn):
 # Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
@@ -114,24 +187,40 @@ repeatDetailsOrdinal-1=ostatni(ą)
 # e.g. "every 3 years on December 14"
 yearlyNthOn=%2$S %1$S;%2$S %1$S raz na #3 lata;%2$S %1$S raz na #3 lat
 
-# LOCALIZATION NOTE (yearlyNthOnNthOf):
+# LOCALIZATION NOTE (yearlyNthOnNthOfNounclass...):
 # Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - ordinal
+# Translate these strings according to noun class/gender of weekday (%2$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings.
+# %1$S - ordinal with article and noun class/gender corresponding to weekday
 # %2$S - weekday
 # %3$S - month
-# #4 - number
+# #4 - yearly interval
 # e.g. "the second Monday of every March"
 # e.g  "every 3 years the second Monday of March"
-yearlyNthOnNthOf=w %1$S %2$S %3$S;w %1$S %2$S %3$S raz na #4 lata;w %1$S %2$S %3$S raz na #4 lat
+yearlyNthOnNthOfNounclass1=w %1$S %2$S %3$S;w %1$S %2$S %3$S raz na #4 lata;w %1$S %2$S %3$S raz na #4 lat
+yearlyNthOnNthOfNounclass2=w %1$S %2$S %3$S;w %1$S %2$S %3$S raz na #4 lata;w %1$S %2$S %3$S raz na #4 lat
 
-# LOCALIZATION NOTE (yearlyNthOfNth):
+# LOCALIZATION NOTE (yearlyOnEveryNthOfNthNounclass1):
 # Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# Translate these strings according to noun class/gender of weekday (%1$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings.
 # %1$S - weekday
 # %2$S - month
-# #3 - number
+# #3 - yearly interval
 # e.g. "every Thursday of March"
 # e.g  "every 3 years on every Thursday of March"
-yearlyOnEveryNthOfNth=w każdy(-ą) %1$S %2$S;w każdy(-ą) %1$S %2$S co #3 lata;w każdy(-ą) %1$S %2$S co #3 lat
+yearlyOnEveryNthOfNthNounclass1=w każdy %1$S %2$S;w każdy %1$S %2$S co #3 lata;w każdy %1$S %2$S co #3 lat
+yearlyOnEveryNthOfNthNounclass1=w każdą %1$S %2$S;w każdą %1$S %2$S co #3 lata;w każdą %1$S %2$S co #3 lat
 
 repeatDetailsMonth1=stycznia
 repeatDetailsMonth2=lutego
@@ -148,22 +237,22 @@ repeatDetailsMonth12=grudnia
 
 # LOCALIZATION NOTE (repeatCount):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
-# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %1%$ - A rule string (see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
 # %3$S - event start time (e.g. hh:mm (PM/AM))
 # %4$S - event end time (e.g. hh:mm (PM/AM))
 # #5 - event occurence times: number
-# e.g. with repeatDetailsRuleMonthly3:
+# e.g. with monthlyNthOfEvery:
 # "Occurs the first Sunday of every 3 month
 #  only on 1/1/2009"
 #  from 5:00 PM to 6:00 PM"
 repeatCount=%1$S\npocząwszy od %2$S, powtarzaj #5 raz\nw godz. od %3$S do %4$S.;%1$S\npocząwszy od %2$S, powtarzaj #5 razy\nw godz. od %3$S do %4$S.;%1$S\npocząwszy od %2$S, powtarzaj #5 razy\nw godz. od %3$S do %4$S.
 # LOCALIZATION NOTE (repeatCountAllDay):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
-# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %1%$ - A rule string (see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
 # #3 - event occurence times: number
-# e.g. with repeatDetailsRuleMonthly3:
+# e.g. with monthlyNthOfEvery:
 # "Occurs the first Sunday of every 3 month
 #  only on 1/1/2009"
 # "Occurs the first Sunday of every 3 month
@@ -171,41 +260,41 @@ repeatCount=%1$S\npocząwszy od %2$S, powtarzaj #5 raz\nw godz. od %3$S do %4$S.
 repeatCountAllDay=%1$S\npocząwszy od %2$S, powtarzaj #3 raz.;%1$S\npocząwszy od %2$S, powtarzaj #3 razy.;%1$S\npocząwszy od %2$S, powtarzaj #3 razy.
 # LOCALIZATION NOTE (repeatDetailsUntil):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
-# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %1%$ - A rule string (see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
 # %3$S - event end date (e.g. mm/gg/yyyy)
 # %4$S - event start time (e.g. hh:mm (PM/AM))
 # %5$S - event end time (e.g. hh:mm (PM/AM))
-# e.g. with repeatDetailsRuleWeekly2:
-# "Occurs every other week on Sunday and Friday
+# e.g. with weeklyNthOn:
+# "Occurs every 2 weeks on Sunday and Friday
 #  effective 1/1/2009 until 1/1/2010
 #  from 5:00 PM to 6:00 PM"
 repeatDetailsUntil=%1$S\nw okresie %2$S do %3$S\nw godz. od %4$S do %5$S.
 # LOCALIZATION NOTE (repeatDetailsUntilAllDay):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
-# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %1%$ - A rule string (see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
 # %3$S - event end date (e.g. mm/gg/yyyy)
-# e.g. with repeatDetailsRuleMonthly6 and all day event:
+# e.g. with monthlyDayOfNth and all day event:
 # "Occurs day 3 of every 5 month
 #  effective 1/1/2009 until 1/1/2010"
 repeatDetailsUntilAllDay=%1$S\nw okresie od %2$S do %3$S.
 # LOCALIZATION NOTE (repeatDetailsInfinite):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
-# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %1%$ - A rule string (see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
 # %3$S - event start time (e.g. hh:mm (PM/AM))
 # %4$S - event end time (e.g. hh:mm (PM/AM))
-# e.g. with repeatDetailsRuleMonthly6:
+# e.g. with monthlyDayOfNth:
 # "Occurs day 3 of every 5 month
 #  effective 1/1/2009
 #  from 5:00 PM to 6:00 PM"
 repeatDetailsInfinite=%1$S\npocząwszy od %2$S\nw godz. od %3$S do %4$S.
 # LOCALIZATION NOTE (repeatDetailsInfiniteAllDay):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
-# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %1%$ - A rule string (see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
-# e.g. with repeatDetailsRuleMonthly6 and all day event:
+# e.g. with monthlyDayOfNth and all day event:
 # "Occurs day 3 of every 5 month
 #  effective 1/1/2009"
 repeatDetailsInfiniteAllDay=%1$S\npocząwszy od %2$S.
@@ -233,8 +322,8 @@ removeCalendarsText=Czy na pewno usunąć załączniki (liczba elementów: %1$S)
 
 # LOCALIZATION NOTE: You can change the order of below params
 # Edit recurrence window -> Recurrence pattern -> Repeat monthly
-# %1$S - ordinal, %2$S - weekday
-# e.g. "First Saturday"
+# %1$S - ordinal with article, %2$S - weekday
+# e.g. "the First Saturday"
 monthlyOrder=%1$S %2$S
 
 # Edit recurrence window -> Recurrence pattern -> Repeat yearly
@@ -244,7 +333,7 @@ monthlyOrder=%1$S %2$S
 yearlyOrder=%1$S %3$S %2$S
 
 # Edit recurrence window -> Recurrence pattern -> Repeat yearly
-# %1$S - ordinal, %2$S - weekday, %3$S  - of, %4$S - month
-# e.g. "First Saturday of September"
+# %1$S - ordinal with article, %2$S - weekday, %3$S  - of, %4$S - month
+# e.g. "the First Saturday of September"
 # If you don't need %3$S in your locale - please put this on the third place.
 yearlyOrder2=%1$S %2$S %3$S %4$S
