--- a/pl/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/pl/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -117,8 +117,8 @@ repeatDetailsAnd=i
 # %2$S - weekday
 # #3 - interval
 # i.e. "the FIRST MONDAY of every 3 months"
-monthlyNthOfEveryNounclass1=w %1$S %2$S miesiąca;%1$S %2$S co #3 miesiące;%1$S %2$S co #3 miesięcy
-monthlyNthOfEveryNounclass2=w %1$S %2$S miesiąca;%1$S %2$S co #3 miesiące;%1$S %2$S co #3 miesięcy
+monthlyNthOfEveryNounclass1=w %1$S %2$S miesiąca;w %1$S %2$S co #3 miesiące;w %1$S %2$S co #3 miesięcy
+monthlyNthOfEveryNounclass2=w %1$S %2$S miesiąca;w %1$S %2$S co #3 miesiące;w %1$S %2$S co #3 miesięcy
 
 # LOCALIZATION NOTE (monthlyEveryOfEveryNounclass...):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
