--- a/sv-SE/mail/chrome/messenger/messenger.properties
+++ b/sv-SE/mail/chrome/messenger/messenger.properties
@@ -435,6 +435,8 @@ folderPaneHeader_all=Alla mappar
 folderPaneHeader_unread=Olästa mappar
 folderPaneHeader_favorite=Favoritmappar
 folderPaneHeader_recent=Tidigare mappar
+folderPaneHeader_smart=Smarta mappar
+smartAccountName=Smarta mappar
 
 # Copy / Move to Folder Again
 #LOCALIZATION NOTE %1$S is the name of the folder we will move to. moveToFolderAgainAccessKey
