--- a/cs/mail/chrome/messenger/messenger.properties
+++ b/cs/mail/chrome/messenger/messenger.properties
@@ -58,8 +58,8 @@ defaultSaveMessageAsFileName=zprava.eml
 SaveMailAs=Uložit zprávu jako
 SaveAttachment=Uložit přílohu
 SaveAllAttachments=Uložit všechny přílohy
-LoadingMessageToPrint=Načítám zprávu pro tisk…
-MessageLoaded=Zpráva nahrána…
+LoadingMessageToPrint=Načítání zprávy k tisku…
+MessageLoaded=Zpráva načtena…
 PrintingMessage=Tisk zprávy…
 PrintPreviewMessage=Náhled zprávy před tiskem…
 PrintingContact=Tisk kontaktu…
@@ -242,7 +242,7 @@ junk=Nevyžádaná
 # for junk score origin picker in search and mail views
 junkScoreOriginPlugin=Zásuvný modul
 junkScoreOriginFilter=Filtr
-junkScoreOriginWhitelist=Whitelist
+junkScoreOriginWhitelist=Bílý seznam
 junkScoreOriginUser=Uživatel
 junkScoreOriginImapFlag=Příznak IMAP
 
@@ -309,11 +309,13 @@ mailAcctType=Pošta
 newsAcctType=Diskusní skupiny
 
 # LOCALIZATION NOTE(nocachedbodytitle): Do not translate "<TITLE>" or "</TITLE>" in the line below
-nocachedbodytitle=<TITLE>Pro zobrazení této zprávy přejděte do režimu online</TITLE>
+nocachedbodytitle=<TITLE>Pro zobrazení této zprávy přejděte do režimu online</TITLE>\n
 
 # mailWindowOverlay.js
 confirmUnsubscribeTitle=Potvrzení zrušení odběru
 confirmUnsubscribeText=Opravdu se chcete odhlásit z odběru %S?
+feedNoSummaryTitle=Bez souhrnu kanálu
+feedNoSummaryAlert=Tento kanál novinek je ve starém formátu, který neobsahuje souhrn novinek a proto nemůže být zobrazen.
 
 # msgHdrViewOverlay.js
 openLabel=Otevřít
@@ -433,6 +435,8 @@ folderPaneHeader_all=Všechny složky
 folderPaneHeader_unread=Nepřečtené složky
 folderPaneHeader_favorite=Oblíbené složky
 folderPaneHeader_recent=Nedávné složky
+folderPaneHeader_smart=Chytré složky
+smartAccountName=Chytré složky
 
 # Copy / Move to Folder Again
 #LOCALIZATION NOTE %1$S is the name of the folder we will move to. moveToFolderAgainAccessKey
