--- a/de/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/de/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -147,7 +147,7 @@ monthlyDayOfNth=Tag %1$S jedes Monats;Tag %1$S jedes #2. Monats
 # %1$S - day of month
 # #2 - month interval
 # e.g. "the last day of every 3 months"
-monthlyLastDayOfNth=am letzten Tag des Monats; am letzten Tag jedes #1 Monats
+monthlyLastDayOfNth=am letzten Tag des Monats; am letzten Tag jedes #1. Monats
 
 # LOCALIZATION NOTE (repeatOrdinal...Nounclass...):
 # Ordinal numbers nouns for every noun class (grammatical genders) of weekdays
