--- a/fr/mail/chrome/messenger/messenger.properties
+++ b/fr/mail/chrome/messenger/messenger.properties
@@ -310,6 +310,8 @@ nocachedbodytitle=<TITLE>Se connecter pour voir ce message</TITLE>\n
 # mailWindowOverlay.js
 confirmUnsubscribeTitle=Confirmation du désabonnement
 confirmUnsubscribeText=Voulez-vous vraiment vous désabonner de %S ?
+feedNoSummaryTitle=Pas de résumé pour le flux
+feedNoSummaryAlert=Ceci est un flux de nouvelles dans un ancien format, qui ne stocke pas les résumés de chaque nouvelle. Par conséquent, il ne peut être affiché.
 
 # msgHdrViewOverlay.js
 openLabel=Ouvrir
