--- a/nl/mail/chrome/messenger/messenger.properties
+++ b/nl/mail/chrome/messenger/messenger.properties
@@ -152,7 +152,7 @@ documentLoading=Bericht laden…
 # LOCALIZATION NOTE (autosyncProgress): Do not translate the word "%1$S" or "%2$S" below.
 # Place the word %1$S in your translation where the name of the comma separated folders should appear.
 # Place the word %2$S in your translation where the name of the comma separated accounts should appear.
-autosyncProgress=Berichten in %1$S van %2$S synchronizeren…
+autosyncProgress=Berichten in %1$S van %2$S synchroniseren…
 
 unreadMsgStatus=Ongelezen: %S
 selectedMsgStatus=Geselecteerd: %S
@@ -297,8 +297,8 @@ nocachedbodybody=De kern van dit bericht is niet van de server \
 gedownload voor offline lezen. Om dit bericht te lezen moet u \
 opnieuw verbinden met het netwerk, Offline kiezen in het \
 menu Bestand en dan Offline werken uitvinken. \
-In de toekomst kunt u selecteren welke berichten of mappen u offline wilt lezen. Om \
-dit te doen kiest u Offline in het menu Bestand, en selecteer dan Synchroniseren. U kunt \
+In de toekomst kunt u selecteren welke berichten of mappen u offline wilt lezen. Kies \
+om dit te doen voor Offline in het menu Bestand en selecteer dan Synchroniseren. U kunt \
 de schijfruimte-instelling wijzigen om het downloaden van grote berichten te voorkomen.
 
 # accountCentral
@@ -314,6 +314,8 @@ nocachedbodytitle=<TITLE>Ga online om dit bericht te bekijken</TITLE>\n
 # mailWindowOverlay.js
 confirmUnsubscribeTitle=Uitschrijven bevestigen
 confirmUnsubscribeText=Weet u zeker dat u zich wilt uitschrijven van %S?
+feedNoSummaryTitle=Geen feedsamenvatting
+feedNoSummaryAlert=Dit is een nieuwsfeed in een oud formaat, dat geen samenvatting van het nieuwsitem opslaat. Deze kan daarom niet worden weergegeven.
 
 # msgHdrViewOverlay.js
 openLabel=Openen
@@ -325,7 +327,7 @@ detachLabelAccesskey=k
 deleteLabel=Verwijderen
 deleteLabelAccesskey=d
 deleteAttachments=De volgende bijlagen zullen permanent van dit bericht worden verwijderd:\n%S\nDit kan niet ongedaan worden gemaakt. Weet u zeker dat u wilt doorgaan?
-detachAttachments=De volgende bijlagen zijn succesvol opgeslagen en zullen nu permanent van dit bericht worden verwijderd:\n%S\nDit kan niet ongedaan worden gemaakt. Weet u zeker dat u wilt doorgaan?
+detachAttachments=De volgende bijlagen zijn met succes opgeslagen en zullen nu permanent van dit bericht worden verwijderd:\n%S\nDit kan niet ongedaan worden gemaakt. Weet u zeker dat u wilt doorgaan?
 deleteAttachmentFailure=Het verwijderen van de geselecteerde bijlagen is mislukt.
 
 # This is the format for prepending accesskeys to the
@@ -341,7 +343,7 @@ attachmentDisplayNameFormat=%S %S
 104=Wachttijd voor verbinding met server %S is verlopen.
 
 recipientSearchCriteria=Onderwerp of geadresseerde bevat:
-fromSearchCriteria=Onderwerp of van bevat:
+fromSearchCriteria=Onderwerp of Van bevat:
 
 # LOCALIZATION NOTE(biffNotification): %1$S is the number of new messages  
 biffNotification_message=heeft %1$S nieuw bericht
@@ -399,10 +401,10 @@ editTagTitle=Label bewerken
 
 # for the virtual folder list dialog title
 # %S is the name of the saved search folder
-editVirtualFolderPropertiesTitle=Opgeslagen zoekeigenschappen van %S bewerken
+editVirtualFolderPropertiesTitle=Eigenschappen van opgeslagen zoekopdracht voor %S bewerken
 
 #alert to inform the user to choose one or more folders to search for a saved search folder
-alertNoSearchFoldersSelected=U moet een map kiezen om te zoeken naar de bewaarde zoekmap.
+alertNoSearchFoldersSelected=U moet ten minste één map kiezen om naar een map voor een opgeslagen zoekopdracht te zoeken.
 
 # These two are displayed in the message and folder pane windows
 # LOCALIZATION NOTE(????ByteAbbreviation): Do not translate %d below, it is the size of the message/folder
