--- a/nl/mail/chrome/messenger/search-attributes.properties
+++ b/nl/mail/chrome/messenger/search-attributes.properties
@@ -27,14 +27,14 @@ Pager=Pieper
 Mobile=Mobiel
 City=Woonplaats
 Street=Straat
-Title=Titel
+Title=Functie
 Organization=Organisatie
 Department=Afdeling
 # more mailnews
 FromToCcOrBcc=Van, Aan, Cc of Bcc
-JunkScoreOrigin=Ongewenste-berichtenscore
-JunkPercent=Ongewenste-berichtenpercentage
+JunkScoreOrigin=Ongewensteberichtenscore
+JunkPercent=Ongewensteberichtenpercentage
 AttachmentStatus=Bijlagestatus
-JunkStatus=Ongewenste-berichtenstatus
+JunkStatus=Ongewensteberichtenstatus
 Label=Label
 Customize=Aanpassen…
