--- a/de/mail/chrome/messenger/messenger.properties
+++ b/de/mail/chrome/messenger/messenger.properties
@@ -448,8 +448,8 @@ moveToFolderAgainAccessKey=i
 copyToFolderAgain=Kopieren in "%1$S"
 copyToFolderAgainAccessKey=i
 
-#LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote images for
-alwaysLoadRemoteContentForSender1=Externe Grafiken von %1$S immer laden.
+#LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote content for
+alwaysLoadRemoteContentForSender2=Externe Inhalte von %1$S immer laden.
 
 # Strings for growl notifications on Mac OS X
 growlNotification=Neue Nachricht(en)
