--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -358,8 +358,8 @@ moveToFolderAgainAccessKey = o
 copyToFolderAgain          = Kopiuj ponownie do "%1$S"
 copyToFolderAgainAccessKey = o
 
-# LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote images for
-alwaysLoadRemoteContentForSender1 = Zawsze pobieraj zdalne obrazki od %1$S
+#LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote content for
+alwaysLoadRemoteContentForSender2 = Zawsze wyświetlaj zdalną zawartość w wiadomościach od %1$S
 
 # Strings for growl notifications on Mac OS X
 growlNotification = Nowa wiadomość
