--- a/fr/mail/chrome/messenger/messenger.properties
+++ b/fr/mail/chrome/messenger/messenger.properties
@@ -448,8 +448,8 @@ moveToFolderAgainAccessKey=v
 copyToFolderAgain=Copier à nouveau vers « %1$S »
 copyToFolderAgainAccessKey=v
 
-#LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote images for
-alwaysLoadRemoteContentForSender1=Toujours charger les images distantes en provenance de %1$S
+#LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote content for
+alwaysLoadRemoteContentForSender2=Toujours charger les contenus distants en provenance de %1$S
 
 # Strings for growl notifications on Mac OS X
 growlNotification=Nouveau courrier électronique
