--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -452,7 +452,7 @@ copyToFolderAgain=Kopier til «%1$S» igjen
 copyToFolderAgainAccessKey=p
 
 #LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote images for
-alwaysLoadRemoteContentForSender1= Alltid last inn bilder fra %1$S
+alwaysLoadRemoteContentForSender2= Alltid last inn eksternt innhold fra %1$S
 
 # Strings for growl notifications on Mac OS X
 growlNotification=Ny e-post
