--- a/cs/mail/chrome/messenger/messenger.properties
+++ b/cs/mail/chrome/messenger/messenger.properties
@@ -452,7 +452,7 @@ copyToFolderAgain=Kopírovat opět do složky "%1$S"
 copyToFolderAgainAccessKey=p
 
 #LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote images for
-alwaysLoadRemoteContentForSender1=Vždy načítat vzdálené obrázky od %1$S
+alwaysLoadRemoteContentForSender2=Vždy načítat vzdálený obsah od %1$S 
 
 # Strings for growl notifications on Mac OS X
 growlNotification=Nová pošta
