--- a/nb-NO/mail/chrome/messenger/importMsgs.properties
+++ b/nb-NO/mail/chrome/messenger/importMsgs.properties
@@ -274,7 +274,7 @@
 2134=Egendefinert 4
 
 # Description: Address book field name
-## @name IMPORT_FIELD_DESC_END
+## @name IMPORT_FIELD_DESC
 ## @loc None
 2135=Notater
 
@@ -348,4 +348,4 @@ ImportModuleFolderName=%S-import
 # Please translate using the brandname in respective languages for Netscape Communicator 4 releases.
 # strings profile dialog that comes up when importing mail from 4.x
 profileTitle=Communicator 4.x-profiler
-profileText=Velg en profil som inneholder den lokale e-posten du vil importere\:
+profileText=Velg en profil som inneholder den lokale e-posten du vil importere:
