--- a/nb-NO/mail/installer/custom.properties
+++ b/nb-NO/mail/installer/custom.properties
@@ -64,7 +64,7 @@ SUMMARY_PAGE_SUBTITLE=Klar til å installere $BrandShortName
 SUMMARY_INSTALLED_TO=Installerer $BrandShortName til følgende plassering:
 SUMMARY_REBOOT_REQUIRED_INSTALL=En omstart av datamaskinen kan være nødvendig for å fullføre installasjonen.
 SUMMARY_REBOOT_REQUIRED_UNINSTALL=En omstart av datamaskinen kan være nødvendig for å fullføre avinstalleringen.
-SUMMARY_MAKE_DEFAULT=$BrandShortName vil settes som standard e-postprogram.
+SUMMARY_MAKE_DEFAULT=$BrandShortName vil installeres som standard e-postprogram.
 SUMMARY_CLICK=Trykk «Installer» for å fortsette.
 SURVEY_TEXT=F&ortell oss hva du syntes om $BrandShortName
 LAUNCH_TEXT=&Start $BrandFullName nå
