--- a/sv-SE/mail/chrome/messenger/messenger.properties
+++ b/sv-SE/mail/chrome/messenger/messenger.properties
@@ -316,6 +316,8 @@ nocachedbodytitle=<TITLE>Du måste välja att arbeta uppkopplad för att se dett
 # mailWindowOverlay.js
 confirmUnsubscribeTitle=Bekräfta avslut
 confirmUnsubscribeText=Är de säker att du vill avsluta prenumerationen från %S?
+feedNoSummaryTitle=Ingen flödessammanfattning
+feedNoSummaryAlert=Det här är ett nyhetsflöde i ett gammalt format som inte lagrar någon sammanfattning av nyhetsposterna. Det kan därför inte visas.
 
 # msgHdrViewOverlay.js
 openLabel=Öppna
