--- a/fr/mail/chrome/messenger/messenger.properties
+++ b/fr/mail/chrome/messenger/messenger.properties
@@ -43,6 +43,8 @@ newFolderMenuItem=Dossier…
 newSubfolderMenuItem=Sous-dossier…
 newFolder=Nouveau dossier…
 newSubfolder=Nouveau sous-dossier…
+markFolderRead=Marquer le dossier comme lu;Marquer les dossiers comme lus
+markNewsgroupRead=Marquer le groupe comme lu;Marquer les groupes comme lus
 folderProperties=Propriétés du dossier…
 newTag=Nouvelle étiquette…
 getNextNMessages=Récupérer les %S prochains messages du groupe
@@ -310,6 +312,7 @@ nocachedbodytitle=<TITLE>Se connecter pour voir ce message</TITLE>\n
 # mailWindowOverlay.js
 confirmUnsubscribeTitle=Confirmation du désabonnement
 confirmUnsubscribeText=Voulez-vous vraiment vous désabonner de %S ?
+confirmUnsubscribeManyText=Voulez-vous vraiment vous désabonner de ces groupes ?
 feedNoSummaryTitle=Pas de résumé pour le flux
 feedNoSummaryAlert=Ceci est un flux de nouvelles dans un ancien format, qui ne stocke pas les résumés de chaque nouvelle. Par conséquent, il ne peut être affiché.
 
